fixed home-page shaded section mobile responsiveness. Words are now centered and do not go off page.

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,8 @@ html::-webkit-scrollbar {
 /* Body Background */
 body {
     background: url('background (2).jpg') no-repeat center center/cover;
-}
+    overflow-x: hidden;
+  }
 
 
 .start {
@@ -465,8 +466,8 @@ body {
 
 .intro {
     width: 100%;
-    height: 110vh;
-    padding: 1em 0 1em 0;
+    height: auto;
+    padding: 14em 0 14em 0;
     margin: auto;
     background: rgba(0, 0, 0, 0.6);
     text-align: center;
@@ -601,7 +602,7 @@ ul{
 .i1, .i2, .i3, .i4 {
     color:white;
     font-weight: 900;
-    margin: auto 0;
+    margin: auto auto;
     max-width: 75%;
     margin: 1em auto;
     font-family: 'Tilt Neon', sans-serif;
@@ -610,7 +611,6 @@ ul{
 
 .i1 {
     font-size: 5em;
-    margin-top: 2.75em;
 }
 
 .i2 {
@@ -658,13 +658,13 @@ ul{
 /*responsive*/
 @media(max-width: 767px){
     .i1{
-      margin-top:2.6em;
+      font-size: 4em;
   }
   }
   @media(max-width: 574px){
     .i1{
-      margin-top:2em;
-      }
+      font-size: 4em;
+    }
   }
   
 
